--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.2.0",
@@ -23,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.17.1",
     "flex-layout": "^1.0.1",
     "rxjs": "~7.5.0",
     "swiper": "^9.1.0",
